@@ -1,0 +1,252 @@
+; An analog sawtooth lead sound where low velocity, pianissimo notes have slow
+; attack and release, and high velocity, fortissimo notes have an extremely
+; quick attack and a quick release. On top of that, note velocity also controls
+; the filter envelope, so the harder you play, the brighter the sound gets. The
+; mod wheel first opens up a global filter, then starts brightening the sound
+; and adds a tremolo effect. The pitch wheel, besides note pitch, also affects
+; the Echo and Reverb effects, so you can play with the pitch long after all
+; notes have been released. Aftertouch adds a vibrato effect to the note
+; belonging to the highest pressed key.
+[js80p]
+MAMPctl = 0.582031250
+MVS = 0.450
+MPRTctl = 0.71093750
+MPRD = 1.0
+MFINctl = 0.550781250
+MWID = 0.680
+MVOL = 0.250
+MSUBctl = 0.58593750
+MF1FRQctl = 0.589843750
+MF1Qctl = 0.7031250
+MF2G = 0.616666666666666
+CAMPctl = 0.582031250
+CVS = 0.750
+CFLDctl = 0.64843750
+CPRTctl = 0.71093750
+CPRD = 1.0
+CFINctl = 0.550781250
+CWID = 0.680
+CVOLctl = 0.55468750
+CF1FRQctl = 0.589843750
+CF1Qctl = 0.7031250
+CF2G = 0.616666666666666
+EV1Vctl = 0.628906250
+EOG = 0.50
+EF1FRQctl = 0.707031250
+EF1Qctl = 0.714843750
+EF2FRQ = 0.955000232568980
+EF2Q = 0.0
+ECDPT = 0.4950
+ECWID = 0.850
+ECHPQ = 0.0
+ECWET = 0.20
+ECDRY = 0.80
+EEDELctl = 0.56250
+EEINV = 0.750
+EEFB = 0.830750750750751
+EEDST = 0.10
+EEDF = 0.839999950256598
+EEWID = 0.90
+EEHPF = 0.572025062046909
+EEHPQ = 0.0
+EECRL = 0.116355451817272
+EECR = 0.01090
+EEWET = 0.120
+EEDRY = 0.80
+ERRSZctl = 0.6250
+ERRS = 0.935750750750751
+ERDST = 0.030
+ERDF = 0.805000595940160
+ERWID = 0.20
+ERHPF = 0.572025053344432
+ERHPQ = 0.0
+ERCRL = 0.166355451817273
+ERCR = 0.01090
+ERWET = 0.050
+ERDRY = 0.90
+F1INctl = 0.50781250
+F1MIN = 0.070
+F1MAX = 0.00010
+F1DST = 0.80
+F2INctl = 0.50781250
+F2MIN = 0.230
+F2MAX = 0.030
+F2DST = 0.20
+F3INctl = 0.50781250
+F3MIN = 0.50
+F4INctl = 0.003906250
+F4MIN = 0.20
+F4MAX = 0.150
+F5INctl = 0.003906250
+F5MIN = 0.250
+F5MAX = 0.349999999999999
+F6MID = 1.0
+F6INctl = 0.503906250
+F6MIN = 0.50
+F6MAX = 0.0
+F6DST = 0.360
+F7INctl = 0.503906250
+F7MIN = 0.70
+F7MAX = 0.150
+F7DST = 0.30
+F8INctl = 0.503906250
+F8MIN = 0.60
+F8MAX = 0.10
+F8DST = 0.30
+F9INctl = 0.503906250
+F9MIN = 0.90
+F9MAX = 0.20
+F9DST = 0.30
+F10INctl = 0.50781250
+F10MIN = 0.090
+F10MAX = 0.00030
+F10DST = 0.950
+F11INctl = 0.50781250
+F11MIN = 0.160
+F11DST = 0.60
+F12INctl = 0.503906250
+F12MIN = 0.590
+F12MAX = 0.860
+F12AMTctl = 0.613281250
+F12DST = 0.150
+F13INctl = 0.503906250
+F13MIN = 0.720
+F13MAX = 0.990
+F13AMTctl = 0.613281250
+F13DST = 0.20
+F14MID = 0.66660
+F14INctl = 0.50
+F14MIN = 1.0
+F14MAX = 0.250
+F15INctl = 0.003906250
+F15MIN = 0.450
+F15MAX = 0.60
+F15DST = 0.20
+F16MID = 0.750
+F16INctl = 0.50
+F16MIN = 0.1150
+F16MAX = 0.6150
+F17MID = 0.750
+F17INctl = 0.50
+F17MIN = 0.1350
+F17MAX = 0.6350
+F18INctl = 0.605468750
+F18MIN = 0.030
+F18AMTctl = 0.519531250
+F19INctl = 0.605468750
+F19MIN = 0.04970
+F19MAX = 0.149699999999999
+F20INctl = 0.003906250
+F20MAX = 0.150
+F20DST = 0.330
+F21INctl = 0.003906250
+F21MIN = 0.030
+F21MAX = 0.109999999999999
+F21DST = 0.50
+F22INctl = 0.003906250
+F22MIN = 0.720
+F22DST = 0.70
+F23INctl = 0.503906250
+F23MIN = 0.0020
+F23MAX = 0.00030
+F23DST = 0.150
+F24INctl = 0.003906250
+F24MIN = 0.10
+F24MAX = 0.020
+F24DST = 0.50
+F25MAX = 0.0
+N1ATKctl = 0.511718750
+N1HLD = 0.0150
+N1DECctl = 0.535156250
+N1SUS = 0.80
+N1RELctl = 0.5156250
+N2AMTctl = 0.531250
+N2ATKctl = 0.511718750
+N2DECctl = 0.53906250
+N2SUS = 0.50
+N2RELctl = 0.5156250
+N3INIctl = 0.61718750
+N3ATKctl = 0.5468750
+N3PKctl = 0.621093750
+N3HLD = 0.0050
+N3DECctl = 0.542968750
+N3SUSctl = 0.61718750
+N3RELctl = 0.5156250
+N3FIN = 0.590
+N4AMTctl = 0.6406250
+N4INI = 1.0
+N4SUS = 1.0
+N4FIN = 1.0
+N5AMTctl = 0.519531250
+N5INI = 0.299999999999999
+N5ATK = 0.058333333333333
+N5DECctl = 0.53906250
+N5SUS = 0.50
+L1FRQctl = 0.644531250
+L1MINctl = 0.63281250
+L1MAXctl = 0.636718750
+L2FRQctl = 0.558593750
+L2MINctl = 0.52343750
+L2MAXctl = 0.527343750
+L2AMTctl = 0.003906250
+L2DST = 0.30
+L3FRQ = 0.001318902200537
+L3PHS = 0.249999999999999
+L3MIN = 0.01630
+L3MAX = 0.1330
+L4FRQ = 0.00150
+L4PHSctl = 0.566406250
+L4MIN = 0.16480
+L4MAX = 0.16860
+L4DST = 0.150
+L4RND = 0.010
+L5FRQ = 0.00070
+L5PHSctl = 0.50
+L5MAX = 0.20
+MWAV = 0.222222222222222
+CWAV = 0.111111111111111
+L1CEN = 1.0
+L4CEN = 1.0
+L1SYN = 1.0
+L2SYN = 1.0
+L3SYN = 1.0
+L6SYN = 1.0
+EESYN = 1.0
+MF1LOG = 1.0
+MF2LOG = 1.0
+CF1LOG = 1.0
+CF2LOG = 1.0
+EF1LOG = 1.0
+EF2LOG = 1.0
+EELOG = 1.0
+ERLOG = 1.0
+N4UPD = 0.50
+NH = 0.80
+ERTYP = 0.666666666666667
+ECTYP = 0.785714285714286
+MOIA = 0.233333333333333
+MOIS = 0.216666666666667
+COIA = 0.216666666666667
+COIS = 0.233333333333333
+L1AEN = 0.250
+L2AEN = 0.333333333333333
+N1ASH = 0.0
+N2ASH = 0.0
+N3ASH = 0.0
+N5ASH = 0.0
+N1DSH = 0.0
+N2DSH = 0.0
+N3DSH = 0.0
+N5DSH = 0.0
+N1RSH = 0.0
+N2RSH = 0.0
+N3RSH = 0.50
+N5RSH = 0.0
+F6DSH = 0.333333333333333
+F15DSH = 0.333333333333333
+F20DSH = 0.333333333333333
+F21DSH = 0.333333333333333
+F22DSH = 0.666666666666667
+F24DSH = 0.666666666666667
+MFX4 = 1.0
+CFX4 = 1.0
