@@ -35,7 +35,7 @@
 namespace JS80P
 {
 
-size_t const Bank::NUMBER_OF_BUILT_IN_PROGRAMS = 42;
+size_t const Bank::NUMBER_OF_BUILT_IN_PROGRAMS = 43;
 
 Bank::Program const Bank::BUILT_IN_PROGRAMS[] = {
 
@@ -5553,6 +5553,256 @@ Bank::Program const Bank::BUILT_IN_PROGRAMS[] = {
             "F15DSH = 0.333333333333333\n"
             "F19DSH = 0.333333333333333\n"
             "EER2 = 1.0\n"
+        )
+    ),
+
+    Program(
+        "Expressive Saw",
+        "Prog043",
+        (
+            "[js80p]\n"
+            "MAMPctl = 0.582031250\n"
+            "MVS = 0.450\n"
+            "MPRTctl = 0.71093750\n"
+            "MPRD = 1.0\n"
+            "MFINctl = 0.550781250\n"
+            "MWID = 0.680\n"
+            "MVOL = 0.250\n"
+            "MSUBctl = 0.58593750\n"
+            "MF1FRQctl = 0.589843750\n"
+            "MF1Qctl = 0.7031250\n"
+            "MF2G = 0.616666666666666\n"
+            "CAMPctl = 0.582031250\n"
+            "CVS = 0.750\n"
+            "CFLDctl = 0.64843750\n"
+            "CPRTctl = 0.71093750\n"
+            "CPRD = 1.0\n"
+            "CFINctl = 0.550781250\n"
+            "CWID = 0.680\n"
+            "CVOLctl = 0.55468750\n"
+            "CF1FRQctl = 0.589843750\n"
+            "CF1Qctl = 0.7031250\n"
+            "CF2G = 0.616666666666666\n"
+            "EV1Vctl = 0.628906250\n"
+            "EOG = 0.50\n"
+            "EF1FRQctl = 0.707031250\n"
+            "EF1Qctl = 0.714843750\n"
+            "EF2FRQ = 0.955000232568980\n"
+            "EF2Q = 0.0\n"
+            "ECDPT = 0.4950\n"
+            "ECWID = 0.850\n"
+            "ECHPQ = 0.0\n"
+            "ECWET = 0.20\n"
+            "ECDRY = 0.80\n"
+            "EEDELctl = 0.56250\n"
+            "EEINV = 0.750\n"
+            "EEFB = 0.830750750750751\n"
+            "EEDST = 0.10\n"
+            "EEDF = 0.839999950256598\n"
+            "EEWID = 0.90\n"
+            "EEHPF = 0.572025062046909\n"
+            "EEHPQ = 0.0\n"
+            "EECRL = 0.116355451817272\n"
+            "EECR = 0.01090\n"
+            "EEWET = 0.120\n"
+            "EEDRY = 0.80\n"
+            "ERRSZctl = 0.6250\n"
+            "ERRS = 0.935750750750751\n"
+            "ERDST = 0.030\n"
+            "ERDF = 0.805000595940160\n"
+            "ERWID = 0.20\n"
+            "ERHPF = 0.572025053344432\n"
+            "ERHPQ = 0.0\n"
+            "ERCRL = 0.166355451817273\n"
+            "ERCR = 0.01090\n"
+            "ERWET = 0.050\n"
+            "ERDRY = 0.90\n"
+            "F1INctl = 0.50781250\n"
+            "F1MIN = 0.070\n"
+            "F1MAX = 0.00010\n"
+            "F1DST = 0.80\n"
+            "F2INctl = 0.50781250\n"
+            "F2MIN = 0.230\n"
+            "F2MAX = 0.030\n"
+            "F2DST = 0.20\n"
+            "F3INctl = 0.50781250\n"
+            "F3MIN = 0.50\n"
+            "F4INctl = 0.003906250\n"
+            "F4MIN = 0.20\n"
+            "F4MAX = 0.150\n"
+            "F5INctl = 0.003906250\n"
+            "F5MIN = 0.250\n"
+            "F5MAX = 0.349999999999999\n"
+            "F6MID = 1.0\n"
+            "F6INctl = 0.503906250\n"
+            "F6MIN = 0.50\n"
+            "F6MAX = 0.0\n"
+            "F6DST = 0.360\n"
+            "F7INctl = 0.503906250\n"
+            "F7MIN = 0.70\n"
+            "F7MAX = 0.150\n"
+            "F7DST = 0.30\n"
+            "F8INctl = 0.503906250\n"
+            "F8MIN = 0.60\n"
+            "F8MAX = 0.10\n"
+            "F8DST = 0.30\n"
+            "F9INctl = 0.503906250\n"
+            "F9MIN = 0.90\n"
+            "F9MAX = 0.20\n"
+            "F9DST = 0.30\n"
+            "F10INctl = 0.50781250\n"
+            "F10MIN = 0.090\n"
+            "F10MAX = 0.00030\n"
+            "F10DST = 0.950\n"
+            "F11INctl = 0.50781250\n"
+            "F11MIN = 0.160\n"
+            "F11DST = 0.60\n"
+            "F12INctl = 0.503906250\n"
+            "F12MIN = 0.590\n"
+            "F12MAX = 0.860\n"
+            "F12AMTctl = 0.613281250\n"
+            "F12DST = 0.150\n"
+            "F13INctl = 0.503906250\n"
+            "F13MIN = 0.720\n"
+            "F13MAX = 0.990\n"
+            "F13AMTctl = 0.613281250\n"
+            "F13DST = 0.20\n"
+            "F14MID = 0.66660\n"
+            "F14INctl = 0.50\n"
+            "F14MIN = 1.0\n"
+            "F14MAX = 0.250\n"
+            "F15INctl = 0.003906250\n"
+            "F15MIN = 0.450\n"
+            "F15MAX = 0.60\n"
+            "F15DST = 0.20\n"
+            "F16MID = 0.750\n"
+            "F16INctl = 0.50\n"
+            "F16MIN = 0.1150\n"
+            "F16MAX = 0.6150\n"
+            "F17MID = 0.750\n"
+            "F17INctl = 0.50\n"
+            "F17MIN = 0.1350\n"
+            "F17MAX = 0.6350\n"
+            "F18INctl = 0.605468750\n"
+            "F18MIN = 0.030\n"
+            "F18AMTctl = 0.519531250\n"
+            "F19INctl = 0.605468750\n"
+            "F19MIN = 0.04970\n"
+            "F19MAX = 0.149699999999999\n"
+            "F20INctl = 0.003906250\n"
+            "F20MAX = 0.150\n"
+            "F20DST = 0.330\n"
+            "F21INctl = 0.003906250\n"
+            "F21MIN = 0.030\n"
+            "F21MAX = 0.109999999999999\n"
+            "F21DST = 0.50\n"
+            "F22INctl = 0.003906250\n"
+            "F22MIN = 0.720\n"
+            "F22DST = 0.70\n"
+            "F23INctl = 0.503906250\n"
+            "F23MIN = 0.0020\n"
+            "F23MAX = 0.00030\n"
+            "F23DST = 0.150\n"
+            "F24INctl = 0.003906250\n"
+            "F24MIN = 0.10\n"
+            "F24MAX = 0.020\n"
+            "F24DST = 0.50\n"
+            "F25MAX = 0.0\n"
+            "N1ATKctl = 0.511718750\n"
+            "N1HLD = 0.0150\n"
+            "N1DECctl = 0.535156250\n"
+            "N1SUS = 0.80\n"
+            "N1RELctl = 0.5156250\n"
+            "N2AMTctl = 0.531250\n"
+            "N2ATKctl = 0.511718750\n"
+            "N2DECctl = 0.53906250\n"
+            "N2SUS = 0.50\n"
+            "N2RELctl = 0.5156250\n"
+            "N3INIctl = 0.61718750\n"
+            "N3ATKctl = 0.5468750\n"
+            "N3PKctl = 0.621093750\n"
+            "N3HLD = 0.0050\n"
+            "N3DECctl = 0.542968750\n"
+            "N3SUSctl = 0.61718750\n"
+            "N3RELctl = 0.5156250\n"
+            "N3FIN = 0.590\n"
+            "N4AMTctl = 0.6406250\n"
+            "N4INI = 1.0\n"
+            "N4SUS = 1.0\n"
+            "N4FIN = 1.0\n"
+            "N5AMTctl = 0.519531250\n"
+            "N5INI = 0.299999999999999\n"
+            "N5ATK = 0.058333333333333\n"
+            "N5DECctl = 0.53906250\n"
+            "N5SUS = 0.50\n"
+            "L1FRQctl = 0.644531250\n"
+            "L1MINctl = 0.63281250\n"
+            "L1MAXctl = 0.636718750\n"
+            "L2FRQctl = 0.558593750\n"
+            "L2MINctl = 0.52343750\n"
+            "L2MAXctl = 0.527343750\n"
+            "L2AMTctl = 0.003906250\n"
+            "L2DST = 0.30\n"
+            "L3FRQ = 0.001318902200537\n"
+            "L3PHS = 0.249999999999999\n"
+            "L3MIN = 0.01630\n"
+            "L3MAX = 0.1330\n"
+            "L4FRQ = 0.00150\n"
+            "L4PHSctl = 0.566406250\n"
+            "L4MIN = 0.16480\n"
+            "L4MAX = 0.16860\n"
+            "L4DST = 0.150\n"
+            "L4RND = 0.010\n"
+            "L5FRQ = 0.00070\n"
+            "L5PHSctl = 0.50\n"
+            "L5MAX = 0.20\n"
+            "MWAV = 0.222222222222222\n"
+            "CWAV = 0.111111111111111\n"
+            "L1CEN = 1.0\n"
+            "L4CEN = 1.0\n"
+            "L1SYN = 1.0\n"
+            "L2SYN = 1.0\n"
+            "L3SYN = 1.0\n"
+            "L6SYN = 1.0\n"
+            "EESYN = 1.0\n"
+            "MF1LOG = 1.0\n"
+            "MF2LOG = 1.0\n"
+            "CF1LOG = 1.0\n"
+            "CF2LOG = 1.0\n"
+            "EF1LOG = 1.0\n"
+            "EF2LOG = 1.0\n"
+            "EELOG = 1.0\n"
+            "ERLOG = 1.0\n"
+            "N4UPD = 0.50\n"
+            "NH = 0.80\n"
+            "ERTYP = 0.666666666666667\n"
+            "ECTYP = 0.785714285714286\n"
+            "MOIA = 0.233333333333333\n"
+            "MOIS = 0.216666666666667\n"
+            "COIA = 0.216666666666667\n"
+            "COIS = 0.233333333333333\n"
+            "L1AEN = 0.250\n"
+            "L2AEN = 0.333333333333333\n"
+            "N1ASH = 0.0\n"
+            "N2ASH = 0.0\n"
+            "N3ASH = 0.0\n"
+            "N5ASH = 0.0\n"
+            "N1DSH = 0.0\n"
+            "N2DSH = 0.0\n"
+            "N3DSH = 0.0\n"
+            "N5DSH = 0.0\n"
+            "N1RSH = 0.0\n"
+            "N2RSH = 0.0\n"
+            "N3RSH = 0.50\n"
+            "N5RSH = 0.0\n"
+            "F6DSH = 0.333333333333333\n"
+            "F15DSH = 0.333333333333333\n"
+            "F20DSH = 0.333333333333333\n"
+            "F21DSH = 0.333333333333333\n"
+            "F22DSH = 0.666666666666667\n"
+            "F24DSH = 0.666666666666667\n"
+            "MFX4 = 1.0\n"
+            "CFX4 = 1.0\n"
         )
     ),
 
